# zarja

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/zarja-cli/: Cargo.toml
crates/zarja-cli/src/: main.rs
crates/zarja-core/: Cargo.toml
crates/zarja-core/src/: error.rs  lib.rs
crates/zarja-core/src/proto/: mod.rs  writer.rs
crates/zarja-core/src/scanner/: mod.rs  wire.rs
