[workspace]
resolver = "2"
members = ["crates/zarja-core", "crates/zarja-cli"]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Kenan Sulayman"]
repository = "https://github.com/19h/zarja"
keywords = ["protobuf", "reverse-engineering", "binary-analysis"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Core dependencies
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"
bytes = "1.5"

# Error handling
thiserror = "2"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Directory traversal and hashing
walkdir = "2.5"
blake3 = "1.5"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
pretty_assertions = "1.4"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
