[package]
name = "zarja-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for extracting and reconstructing Protocol Buffer definitions from compiled binaries"
readme = "../../README.md"
homepage = "https://github.com/19h/zarja"
documentation = "https://docs.rs/zarja-core"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
# Enable additional format outputs (JSON, etc.)
extended-formats = []
